infra/k8s/evnt-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: event-bus:latest
          resources:
            limits:
              memory: "200Mi"
              cpu: "0.6"
            requests:
              memory: "100Mi"
              cpu: "0.3"
